--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,12 +6,12 @@ steps:
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
   - name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/baseProject", "--build-arg=JAR_FILE=target/baseProject.jar", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/baseProject' ]
+    args: [ 'push', 'gcr.io/$PROJECT_ID/hellospring' ]
   # Deploy container image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated' ]
-images: ["gcr.io/$PROJECT_ID/baseProject"]
+images: ["gcr.io/$PROJECT_ID/hellospring"]
