--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
-  - name: maven:3-jdk-8
+  - name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ["test"]
-  - name: maven:3-jdk-8
+  - name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
-  - name: gcr.io/cloud-builders/docker
+  - name: 'gcr.io/cloud-builders/docker'
     args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring", "--build-arg=JAR_FILE=target/baseProject-0.0.1-SNAPSHOT.jar", "."]
 
   # Push the container image to Container Registry
@@ -13,5 +13,5 @@ steps:
     args: [ 'push', 'gcr.io/$PROJECT_ID/hellospring' ]
   # Deploy container image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated' ]
+    args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed' ]
 images: ["gcr.io/$PROJECT_ID/hellospring"]
