--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,6 +12,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/hellospring' ]
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/cloud-builders/gcloud'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
     args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed' ]
 images: ["gcr.io/$PROJECT_ID/hellospring"]
