--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,5 +14,5 @@ steps:
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
-    args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed' ]
+    args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated' ]
 images: ["gcr.io/$PROJECT_ID/hellospring"]
