--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,13 +6,13 @@ steps:
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
   - name: 'gcr.io/cloud-builders/docker'
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring", "--build-arg=JAR_FILE=target/baseProject-0.0.1-SNAPSHOT.jar", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/baseproject", "--build-arg=JAR_FILE=target/baseProject-0.0.1-SNAPSHOT.jar", "."]
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/hellospring' ]
+    args: [ 'push', 'gcr.io/$PROJECT_ID/baseproject' ]
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
-    args: [ 'run', 'deploy', 'myservice', '--image', 'gcr.io/$PROJECT_ID/hellospring', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated' ]
-images: ["gcr.io/$PROJECT_ID/hellospring"]
+    args: [ 'run', 'deploy', 'baseproject', '--image', 'gcr.io/$PROJECT_ID/baseproject', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated' ]
+images: ["gcr.io/$PROJECT_ID/baseproject"]
