--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
-  - name: 'mvn package'
+  - name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
-  - name: 'Build JAR'
+  - name: 'gcr.io/cloud-builders/docker'
     args: ["build", "-t", "gcr.io/$PROJECT_ID/baseproject", "--build-arg=JAR_FILE=target/baseProject-0.0.1-SNAPSHOT.jar", "."]
 
   # Push the container image to Container Registry
-  - name: 'Push the container image to Container Registry'
+  - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/baseproject' ]
   # Deploy container image to Cloud Run
-  - name: 'Deploy container image to Cloud Run'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args: [ 'run', 'deploy', 'baseproject', '--image', 'gcr.io/$PROJECT_ID/baseproject', '--region', 'asia-southeast1', '--platform', 'managed', '--allow-unauthenticated' ]
 images: ["gcr.io/$PROJECT_ID/baseproject"]
