--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port= 8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://34.87.167.249:3306/baseapp?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://35.186.152.253:3306/baseProject?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.password= Jackie56*
 
 ## Hibernate Properties
 
