--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,22 @@
 server.port= 8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://35.186.152.253:3306/baseProject?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username= root
-spring.datasource.password= Jackie56*
+#spring.datasource.url= jdbc:mysql://35.186.152.253:3306/baseProject?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username= root
+#spring.datasource.password= Jackie56*
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+
+#H2 Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
