--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 ## Server Properties
 server.port=${PORT:8080}
+server.servlet.context-path=/api/v1
+##Swagger path
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/doc.html
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url= jdbc:mysql://35.186.152.253:3306/baseProject?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
